2008-01-20  Stephen Sinclair  <radarsat1@gmail.com>

	* Avoid unnecessary repetitive reallocation on lo_message_add_*(). (Dave Robillard)
	* Fixed errors related to 64-bit in packing blob and MIDI messages. (Dave Robillard)

2008-01-13  Stephen Sinclair  <radarsat1@gmail.com>

        * Fixed index increment in sendosc.c for string and symbol types

2008-01-12  Nicholas Humfrey  <njh@aelius.com>

	* Added tools from Kentaro Fukuchi

2007-03-19  Nicholas Humfrey  <njh@aelius.com>

	* Applied patch from Chris Hixon to check for buffer overflows

2007-03-16  Nicholas Humfrey  <njh@aelius.com>

	* Fixed several compiler warnings
	* Changed address for package bug reports

2007-03-09  Nicholas Humfrey  <njh@aelius.com>

	* Changed lo_blob_new() to take const void* (thanks to Lars Luthman)
	* Disable getnameinfo() method of getting hostname, when IPv6 is disabled
	* Unlink Unix server socket when it is close (thanks to Dominic Sacr)
	* Checks size of unix socket path properly
	* Now accepts unix socket format osc.unix://localhost/tmp/mysocket.sock
	* Released version 0.24pre1
	
2007-03-08  Nicholas Humfrey  <njh@aelius.com>

	* Added lo_server_thread_new_with_proto(), as suggested by Dave Robillard
	* Applied patch from Aron Stansvik to fix bug with FreeBSD/NetBSD systems
	* Removed freeaddrinfo() from resolve_address() error case (thanks to Anthony Green)
	* Only call connect() for TCP sessions (thanks to Roger B. Dannenberg)

2006-03-29  Nicholas Humfrey  <njh@aelius.com>

	* Applied lo_address_get_url() patch from Sze'kelyi Szabolcs
	* Added lo_server_get_protocol() and lo_address_get_protocol()
	* Added tests for lo_address_get_* tests to test tool

2006-01-26  Nicholas Humfrey  <njh@aelius.com>

	* IPv6 is now disabled by default
	* Released version 0.23

2005-12-29  Nicholas Humfrey  <njh@aelius.com>

	* Fixed pthread resource leak, when stopping thread

2005-12-21  Nicholas Humfrey  <njh@aelius.com>
