@@ -14,6 +14,7 @@
  *  $Id$
  */
 
+#include <stdarg.h>
 #include <stdlib.h>
 #include <stdio.h>
 #include <string.h>
@@ -76,6 +77,154 @@ void lo_message_free(lo_message m)
 	free(m->data);
     }
     free(m);
+}
+
+/* Don't call lo_message_add_varargs_internal directly, use
+ * lo_message_add_varargs, a macro wrapping this function with
+ * appropriate values for file and line */
+
+int lo_message_add_varargs_internal(lo_message msg, const char *types,
+                                    va_list ap, const char *file, int line)
+{
+    int count = 0;
+    int i;
+    int64_t i64;
+    float f;
+    char *s;
+    lo_blob b;
+    uint8_t *m;
+    lo_timetag tt;
+    double d;
+	int ret = 0;
+
+    while (types && *types) {
+	count++;
+    i=0;
+    i64=0;
+    f=0;
+    s=0;
+    b=0;
+    m=0;
+    d=0;
+	switch (*types++) {
+
+	case LO_INT32:
+	    i = va_arg(ap, int32_t);
+	    lo_message_add_int32(msg, i);
+	    break;
+
+	case LO_FLOAT:
+	    f = (float)va_arg(ap, double);
+	    lo_message_add_float(msg, f);
+	    break;
+
+	case LO_STRING:
+	    s = va_arg(ap, char *);
+	    if (s == (char *)LO_MARKER_A) {
+		fprintf(stderr, "liblo error: lo_send or lo_message_add called with "
+			"invalid string pointer for arg %d, probably arg mismatch\n"
+		        "at %s:%d, exiting.\n", count, file, line);
+	    }
+	    lo_message_add_string(msg, s);
+	    break;
+
+	case LO_BLOB:
+	    b = va_arg(ap, lo_blob);
+	    lo_message_add_blob(msg, b);
+	    break;
+
+	case LO_INT64:
+	    i64 = va_arg(ap, int64_t);
+	    lo_message_add_int64(msg, i64);
+	    break;
+
+	case LO_TIMETAG:
+	    tt = va_arg(ap, lo_timetag);
+	    lo_message_add_timetag(msg, tt);
+	    break;
+
+	case LO_DOUBLE:
+	    d = va_arg(ap, double);
+	    lo_message_add_double(msg, d);
+	    break;
+
+	case LO_SYMBOL:
+	    s = va_arg(ap, char *);
+	    if (s == (char *)LO_MARKER_A) {
+		fprintf(stderr, "liblo error: lo_send or lo_message_add called with "
+			"invalid symbol pointer for arg %d, probably arg mismatch\n"
+		        "at %s:%d, exiting.\n", count, file, line);
+        va_end(ap);
+        return -2;
+	    }
+	    lo_message_add_symbol(msg, s);
+	    break;
+
+	case LO_CHAR:
+	    i = va_arg(ap, int);
+	    lo_message_add_char(msg, i);
+	    break;
+
+	case LO_MIDI:
+	    m = va_arg(ap, uint8_t *);
+	    lo_message_add_midi(msg, m);
+	    break;
+
+	case LO_TRUE:
+	    lo_message_add_true(msg);
+	    break;
+
+	case LO_FALSE:
+	    lo_message_add_false(msg);
+	    break;
+
+	case LO_NIL:
+	    lo_message_add_nil(msg);
+	    break;
+
+	case LO_INFINITUM:
+	    lo_message_add_infinitum(msg);
+	    break;
+
+	default:
+		ret = -1; // unknown type
+	    fprintf(stderr, "liblo warning: unknown type '%c' at %s:%d\n",
+		    *(types-1), file, line);
+	    break;
+	}
+    }
+    i = va_arg(ap, uint32_t);
+    if (i != LO_MARKER_A) {
+	ret = -2; // bad format/args
+	fprintf(stderr, "liblo error: lo_send, lo_message_add, or lo_message_add_varargs called with "
+			"mismatching types and data at\n%s:%d, exiting.\n", file, line);
+    va_end(ap);
+    return ret;
+    }
+    i = va_arg(ap, uint32_t);
+    if (i != LO_MARKER_B) {
+	ret = -2; // bad format/args
+	fprintf(stderr, "liblo error: lo_send, lo_message_add, or lo_message_add_varargs called with "
+			"mismatching types and data at\n%s:%d, exiting.\n", file, line);
+    }
+    va_end(ap);
+
+	return ret;
+}
+
+/* Don't call lo_message_add_internal directly, use lo_message_add,
+ * a macro wrapping this function with appropriate values for file and line */
+
+int lo_message_add_internal(lo_message msg, const char *file, const int line,
+                            const char *types, ...)
+{
+    va_list ap;
+    int ret = 0;
+
+    va_start(ap, types);
+    ret = lo_message_add_varargs_internal(msg, ap, types, file, line);
+
+	return ret;
 }
 	
 void lo_message_add_int32(lo_message m, int32_t a)
